--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/elements": "^0.24.2",
+    "@clerk/localizations": "^3.32.1",
+    "@clerk/nextjs": "^6.36.5",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.31.2",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "next-intl": "^4.6.1",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
